Add images to question sections

--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -61,6 +61,7 @@
       </div>
       <div class="step-label">Question 2 of 5</div>
       <h2>Should a government be allowed to restrict civil liberties during a national emergency?</h2>
+      <img src="q2.jpg" alt="Question 2 Image" class="q-image">
       <p>Please answer honestly, just as you normally think.</p>
       <div class="options-block">
         <div class="opt" data-key="politics">Yes</div>
@@ -81,6 +82,7 @@
       </div>
       <div class="step-label">Question 3 of 5</div>
       <h2>Do you support European bans on full-face religious coverings (burqa/niqab) in public spaces?</h2>
+      <img src="q3.jpg" alt="Question 3 Image" class="q-image">
       <p>Please answer honestly, just as you normally think.</p>
       <div class="options-block">
         <div class="opt" data-key="gender">Support</div>
@@ -100,6 +102,7 @@
       </div>
       <div class="step-label">Question 4 of 5</div>
       <h2>How do you view Spain’s ‘Okupa’ movement—illegally occupying empty homes?</h2>
+      <img src="q4.jpeg" alt="Question 4 Image" class="q-image">
       <p>Please answer honestly, just as you normally think.</p>
       <div class="options-block">
         <div class="opt" data-key="identity">Justified</div>
@@ -119,6 +122,7 @@
       </div>
       <div class="step-label">Question 5 of 5</div>
       <h2>How do you view the rising age-based hostility toward older adults in Korea’s pension debates?</h2>
+      <img src="q5.jpg" alt="Question 5 Image" class="q-image">
       <p>There is no right or wrong answer.</p>
       <div class="options-block">
         <div class="opt" data-key="stress">Support</div>
