Refine pre-measurement visuals for iPad

--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -143,8 +143,8 @@
 
       <div class="instruction-graphic">
         <div class="finger-cue"></div>
-        <div class="camera-cue"></div>
-        <div class="arrow-cue">↓</div>
+        <!-- Camera cue removed -->
+        <div class="arrow-cue">↑</div>
       </div>
 
       <p class="center" style="margin-top:20px;">
