--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -137,14 +137,26 @@
 
     <!-- PRE-MEASURE INSTRUCTION -->
     <div class="card" id="screen-pre-measure" style="display:none;">
+
+      <!-- Top Interaction pointing to camera -->
+      <div class="instruction-graphic">
+        <div class="finger-cue"></div>
+        <div class="arrow-cue">↑</div>
+      </div>
+
       <div class="step-label">Preparation</div>
       <h2 class="center">Ready to measure?</h2>
       <p class="center">For an accurate stress index, we will measure your heart rate.</p>
 
-      <div class="instruction-graphic">
-        <div class="finger-cue"></div>
-        <!-- Camera cue removed -->
-        <div class="arrow-cue">↑</div>
+      <!-- Line Illustration Placeholder -->
+      <div class="illustration-wrap">
+        <!-- Placeholder for line illustration -->
+        <div class="ipad-illustration-placeholder">
+          <div class="ipad-outline">
+            <div class="camera-dot"></div>
+            <div class="finger-line"></div>
+          </div>
+        </div>
       </div>
 
       <p class="center" style="margin-top:20px;">
