Replace placeholder with uploaded iPad illustration

--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -148,15 +148,9 @@
       <h2 class="center">Ready to measure?</h2>
       <p class="center">For an accurate stress index, we will measure your heart rate.</p>
 
-      <!-- Line Illustration Placeholder -->
+      <!-- Line Illustration -->
       <div class="illustration-wrap">
-        <!-- Placeholder for line illustration -->
-        <div class="ipad-illustration-placeholder">
-          <div class="ipad-outline">
-            <div class="camera-dot"></div>
-            <div class="finger-line"></div>
-          </div>
-        </div>
+        <img src="ipad_instruction.png" alt="iPad Camera Instruction" class="instruction-img">
       </div>
 
       <p class="center" style="margin-top:20px;">
