Revert to PNG illustration and fix arrow to absolute top

--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -150,7 +150,7 @@
 
       <!-- Line Illustration -->
       <div class="illustration-wrap">
-        <img src="ipad_instruction.svg" alt="iPad Camera Instruction" class="instruction-img">
+        <img src="ipad_instruction.png" alt="iPad Camera Instruction" class="instruction-img">
       </div>
 
       <p class="center" style="margin-top:20px;">
