--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -147,7 +147,7 @@
 
       <!-- Line Illustration -->
       <div class="illustration-wrap">
-        <img src="ipad_instruction.png" alt="iPad Camera Instruction" class="instruction-img">
+        <img src="ipad_instruction.png?v=3" alt="iPad Camera Instruction" class="instruction-img">
       </div>
 
       <p class="center" style="margin-top:20px;">
