Reorder result carousel: Heartbeat first, then messages, then position

--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -193,8 +193,18 @@
     <div id="screen-result" style="display:none;">
       <div class="carousel-container" id="result-carousel">
 
-        <!-- PAGE 1: The World View -->
+        <!-- PAGE 1: Visitor’s Heartbeat (Formerly Slide 3) -->
         <div class="result-slide active" id="slide-1">
+          <div class="slide-content center-text">
+            <p class="fade-in-text">Meanwhile,<br>your heart kept going.</p>
+            <div class="result-bpm fade-in-text delay-1" id="result-bpm">– bpm</div>
+            <div class="result-label fade-in-text delay-2" id="result-label">unique rhythm pattern</div>
+          </div>
+          <div class="tap-hint">Tap to turn the page →</div>
+        </div>
+
+        <!-- PAGE 2: The World View (Formerly Slide 1) -->
+        <div class="result-slide" id="slide-2">
           <div class="slide-content center-text">
             <h2 class="fade-in-text">There are more than<br>8.2 billion people<br>living completely<br>different lives.
             </h2>
@@ -204,21 +214,11 @@
           <div class="tap-hint">Tap to turn the page →</div>
         </div>
 
-        <!-- PAGE 2: Zoom Into the Visitor -->
-        <div class="result-slide" id="slide-2">
+        <!-- PAGE 3: Zoom Into the Visitor (Formerly Slide 2) -->
+        <div class="result-slide" id="slide-3">
           <div class="slide-content center-text">
             <h2 class="fade-in-text">Just as everyone lives<br>in different environments<br>and rhythms,<br>different is
               not wrong.</h2>
-          </div>
-          <div class="tap-hint">Tap to turn the page →</div>
-        </div>
-
-        <!-- PAGE 3: Visitor’s Heartbeat -->
-        <div class="result-slide" id="slide-3">
-          <div class="slide-content center-text">
-            <p class="fade-in-text">Meanwhile,<br>your heart kept going.</p>
-            <div class="result-bpm fade-in-text delay-1" id="result-bpm">– bpm</div>
-            <div class="result-label fade-in-text delay-2" id="result-label">unique rhythm pattern</div>
           </div>
           <div class="tap-hint">Tap to turn the page →</div>
         </div>
