Add world map image and animations

--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -214,6 +214,7 @@
           <div class="slide-content center-text">
             <h2 class="fade-in-text">There are more than<br>8.2 billion people<br>living completely<br>different lives.
             </h2>
+            <img src="world_map.jpg" class="fade-in-image delay-2" alt="World Map">
             <p class="fade-in-text delay-1">Some start before sunrise.<br>Some move slowly.<br>Some feel safe.<br>Some
               feel watched.</p>
           </div>
