--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -792,33 +792,108 @@
         const slide = document.getElementById(`slide-${i}`);
         if (i === index) {
           slide.classList.add('active');
+
+          // Trigger Animations based on Slide
+          if (index === 5) { // Neighborhood
+            animateNeighborhood();
+          } else if (index === 6) { // Histogram
+            animateHistogram();
+          } else if (index === 7) { // Cluster Map
+            animateClusterMap();
+          }
+
         } else {
           slide.classList.remove('active');
+
+          // Reset animations if needed (optional, for replayability)
+          if (i === 6) resetHistogram();
         }
       }
       currentSlide = index;
     }
 
-    function nextSlide() {
-      if (currentSlide < totalSlides) {
-        showSlide(currentSlide + 1);
-      }
+    // ... (nextSlide, event listeners remain same) ...
+
+    // Animation Helpers
+    function animateCount(obj, end, duration) {
+      if (!obj) return;
+      let startTimestamp = null;
+      const start = 0;
+      const step = (timestamp) => {
+        if (!startTimestamp) startTimestamp = timestamp;
+        const progress = Math.min((timestamp - startTimestamp) / duration, 1);
+        // Ease out quart
+        const ease = 1 - Math.pow(1 - progress, 4);
+        const current = Math.floor(ease * (end - start) + start);
+        obj.textContent = current;
+        if (progress < 1) {
+          window.requestAnimationFrame(step);
+        } else {
+          obj.textContent = end;
+        }
+      };
+      window.requestAnimationFrame(step);
     }
 
-    // Tap to advance
-    document.getElementById('result-carousel').addEventListener('click', (e) => {
-      // Don't advance if clicking a button or interactive element in the last slide
-      if (e.target.tagName === 'BUTTON' || e.target.closest('.scrollable')) return;
-      nextSlide();
-    });
+    function animateNeighborhood() {
+      // Get values from data attributes or global state? 
+      // We can read the target value from the element if we stored it, 
+      // or just re-calculate. Since we have `updateNeighborhoodStats` which sets text,
+      // let's modify `updateNeighborhoodStats` to store value in dataset and set text to 0 initially.
 
-    // Also allow clicking the hint specifically
-    document.querySelectorAll('.tap-hint').forEach(hint => {
-      hint.addEventListener('click', (e) => {
-        e.stopPropagation(); // Prevent double firing
-        nextSlide();
+      const el2 = document.getElementById('nb-count-2');
+      const el5 = document.getElementById('nb-count-5');
+      const elU = document.getElementById('nb-count-unique');
+
+      if (el2.dataset.target) animateCount(el2, parseInt(el2.dataset.target), 1500);
+      if (el5.dataset.target) animateCount(el5, parseInt(el5.dataset.target), 1500);
+      if (elU.dataset.target) animateCount(elU, parseInt(elU.dataset.target), 1500);
+    }
+
+    function animateHistogram() {
+      const bars = document.querySelectorAll('.hist-bar');
+      bars.forEach((bar, i) => {
+        setTimeout(() => {
+          bar.style.height = bar.dataset.height;
+        }, i * 100); // Staggered effect
       });
-    });
+    }
+
+    function resetHistogram() {
+      const bars = document.querySelectorAll('.hist-bar');
+      bars.forEach(bar => {
+        bar.style.height = '0%';
+      });
+    }
+
+    let clusterAnimFrame = null;
+    function animateClusterMap() {
+      if (clusterAnimFrame) cancelAnimationFrame(clusterAnimFrame);
+      const w = clusterCanvas.width;
+      const h = clusterCanvas.height;
+      // We need userBpm to draw the user dot correctly. 
+      // It's not easily accessible here unless we store it globally.
+      // Let's assume `lastMeasuredBpm` is available or we pass it.
+      // For now, let's make `drawClusterMap` handle the static draw and we just overlay animation?
+      // Better: Re-run the draw with a progress factor.
+
+      let progress = 0;
+      const duration = 2000;
+      let start = null;
+
+      function step(timestamp) {
+        if (!start) start = timestamp;
+        const elapsed = timestamp - start;
+        progress = Math.min(elapsed / duration, 1);
+
+        drawClusterMap(lastMeasuredBpm, progress); // Modified draw function
+
+        if (progress < 1) {
+          clusterAnimFrame = requestAnimationFrame(step);
+        }
+      }
+      clusterAnimFrame = requestAnimationFrame(step);
+    }
 
     // ECG Animation
     const ecgCanvas = document.getElementById('result-ecg-canvas');
@@ -848,19 +923,12 @@
       ecgCtx.beginPath();
       ecgCtx.moveTo(0, centerY);
 
-      // Store path history to redraw scrolling effect? 
-      // Simpler: Draw a "scan line" erasing old and drawing new
-      // Or: Just move x from 0 to width, then clear and loop.
-
-      // Let's do the "scan" style: x moves, we clear a rect ahead of x, and draw line.
-
       let lastY = centerY;
 
       function loop() {
         framesSinceBeat++;
 
         // Calculate Y based on beat timing
-        // Simple QRS complex simulation
         let y = centerY;
 
         // Trigger beat
@@ -894,8 +962,6 @@
         if (x > width) {
           x = 0;
           ecgCtx.moveTo(0, centerY);
-          // Clear whole canvas for clean loop or use fade?
-          // Let's clear rect ahead to simulate "scope"
           ecgCtx.fillStyle = '#fff';
           ecgCtx.fillRect(0, 0, width, height);
           ecgCtx.beginPath(); // reset path
@@ -927,6 +993,8 @@
         bpm = Math.max(50, Math.min(120, base));
       }
 
+      lastMeasuredBpm = bpm;
+
       // Reset Carousel
       showSlide(1);
 
@@ -956,102 +1024,43 @@
       findHeartTwin(bpm);
     }
 
-    function drawClusterMap(userBpm) {
-      const w = clusterCanvas.width;
-      const h = clusterCanvas.height;
-      clusterCtx.clearRect(0, 0, w, h);
+    function findHeartTwin(userBpm) {
+      // Find closest match
+      let closest = populationData[0];
+      let minDiff = Infinity;
 
-      // Draw Population (Global Scatter)
       populationData.forEach(p => {
-        const x = Math.random() * w;
-        const y = Math.random() * h;
-
-        clusterCtx.beginPath();
-        clusterCtx.arc(x, y, 1.5, 0, Math.PI * 2);
-
-        if (p.bpm < 70) clusterCtx.fillStyle = "rgba(16, 185, 129, 0.6)";
-        else if (p.bpm < 90) clusterCtx.fillStyle = "rgba(245, 158, 11, 0.6)";
-        else clusterCtx.fillStyle = "rgba(239, 68, 68, 0.6)";
-
-        clusterCtx.fill();
+        const diff = Math.abs(p.bpm - userBpm);
+        if (diff < minDiff) {
+          minDiff = diff;
+          closest = p;
+        }
       });
 
-      // Draw User (South Korea)
-      const userX = w * 0.82;
-      const userY = h * 0.38;
-
-      // Glow
-      const grad = clusterCtx.createRadialGradient(userX, userY, 2, userX, userY, 20);
-      grad.addColorStop(0, "rgba(67, 97, 238, 1)");
-      grad.addColorStop(0.5, "rgba(67, 97, 238, 0.5)");
-      grad.addColorStop(1, "rgba(67, 97, 238, 0)");
-      clusterCtx.fillStyle = grad;
-      clusterCtx.beginPath();
-      clusterCtx.arc(userX, userY, 20, 0, Math.PI * 2);
-      clusterCtx.fill();
-
-      // Pulse Animation Ring
-      const time = Date.now() / 1000;
-      const radius = 10 + Math.sin(time * 3) * 5;
-      clusterCtx.beginPath();
-      clusterCtx.arc(userX, userY, radius, 0, Math.PI * 2);
-      clusterCtx.strokeStyle = "rgba(255, 255, 255, 0.8)";
-      clusterCtx.lineWidth = 1;
-      clusterCtx.stroke();
-
-      // Dot
-      clusterCtx.beginPath();
-      clusterCtx.arc(userX, userY, 6, 0, Math.PI * 2);
-      clusterCtx.fillStyle = "#fff";
-      clusterCtx.fill();
-      clusterCtx.strokeStyle = "var(--primary)";
-      clusterCtx.lineWidth = 2;
-      clusterCtx.stroke();
-
-      // Label
-      clusterCtx.fillStyle = "#fff";
-      clusterCtx.font = "bold 12px Montserrat Alternates";
-      clusterCtx.textAlign = "center";
-      clusterCtx.fillText("You", userX, userY + 25);
+      twinDesc.textContent = `Visitor #${closest.id.toString().padStart(3, '0')} (${closest.bpm} bpm)`;
     }
 
-    function updateGauge(userBpm) {
-      // Approximate Percentile using Normal CDF
-      const mean = 80;
-      const std = 15;
-      const z = (userBpm - mean) / std;
-      const t = 1 / (1 + 0.3275911 * Math.abs(z));
-      const erf = 1 - ((((1.061405429 * t + -1.453152027) * t + 1.421413741) * t + -0.284496736) * t + 0.254829592) * t * Math.exp(-z * z);
-      let percentile = 0.5 * (1 + Math.sign(z) * erf);
-      percentile = Math.round(percentile * 100);
-
-      // Reset width for animation effect
-      gaugeFill.style.width = '0%';
-      gaugeMarker.style.left = '0%';
-
-      // Trigger animation after a slight delay (or when slide is shown)
-      setTimeout(() => {
-        gaugeFill.style.width = `${percentile}%`;
-        gaugeMarker.style.left = `${percentile}%`;
-      }, 500);
-
-      gaugeText.textContent = `${percentile}th Percentile`;
-
-      if (percentile > 40 && percentile < 60) {
-        gaugeInsight.textContent = `You are in the ${percentile}th percentile. Right in the middle.`;
-      } else {
-        gaugeInsight.textContent = `You are in the ${percentile}th percentile.`;
-      }
-    }
+    // Modified Update Functions
+    let lastMeasuredBpm = 80; // Store for redraws
 
     function updateNeighborhoodStats(userBpm) {
       const range2 = populationData.filter(p => Math.abs(p.bpm - userBpm) <= 2).length;
       const range5 = populationData.filter(p => Math.abs(p.bpm - userBpm) <= 5).length;
       const exact = populationData.filter(p => p.bpm === userBpm).length;
 
-      nbCount2.textContent = range2;
-      nbCount5.textContent = range5;
-      nbCountUnique.textContent = exact > 0 ? exact : "1";
+      const el2 = document.getElementById('nb-count-2');
+      const el5 = document.getElementById('nb-count-5');
+      const elU = document.getElementById('nb-count-unique');
+
+      // Store target and set to 0/--
+      el2.dataset.target = range2;
+      el2.textContent = "0";
+
+      el5.dataset.target = range5;
+      el5.textContent = "0";
+
+      elU.dataset.target = exact > 0 ? exact : "1";
+      elU.textContent = "0";
     }
 
     function drawHistogram(userBpm) {
@@ -1074,7 +1083,11 @@
         const bar = document.createElement('div');
         bar.className = 'hist-bar';
         const heightPct = (count / maxCount) * 100;
-        bar.style.height = `${heightPct}%`;
+
+        // Set initial height to 0 and store target
+        bar.style.height = '0%';
+        bar.dataset.height = `${heightPct}%`;
+
         bar.setAttribute('data-count', count);
 
         if (userBpm >= bins[i] && userBpm < bins[i] + 10) {
@@ -1086,39 +1099,105 @@
       });
     }
 
-    function findHeartTwin(userBpm) {
-      // Find closest match
-      let closest = populationData[0];
-      let minDiff = Infinity;
+    function drawClusterMap(userBpm, progress = 1) {
+      const w = clusterCanvas.width;
+      const h = clusterCanvas.height;
+      clusterCtx.clearRect(0, 0, w, h);
 
-      populationData.forEach(p => {
-        const diff = Math.abs(p.bpm - userBpm);
-        if (diff < minDiff) {
-          minDiff = diff;
-          closest = p;
-        }
-      });
+      // Draw Population (Global Scatter)
+      // Animate: Draw only a subset based on progress OR draw all with opacity
 
-      twinDesc.textContent = `Visitor #${closest.id.toString().padStart(3, '0')} (${closest.bpm} bpm)`;
+      const countToDraw = Math.floor(populationData.length * progress);
+
+      for (let i = 0; i < countToDraw; i++) {
+        const p = populationData[i];
+        // We need stable random positions. 
+        // Problem: previous code generated random x,y inside the loop. 
+        // We need to generate them once and store them.
+        // Let's assume populationData has x,y now. 
+        // If not, we should add them in generateFakePopulation.
+
+        // Fallback if no x,y (should fix generateFakePopulation too)
+        const x = p.x || Math.random() * w;
+        const y = p.y || Math.random() * h;
+
+        clusterCtx.beginPath();
+        clusterCtx.arc(x, y, 1.5, 0, Math.PI * 2);
+
+        if (p.bpm < 70) clusterCtx.fillStyle = "rgba(16, 185, 129, 0.6)";
+        else if (p.bpm < 90) clusterCtx.fillStyle = "rgba(245, 158, 11, 0.6)";
+        else clusterCtx.fillStyle = "rgba(239, 68, 68, 0.6)";
+
+        clusterCtx.fill();
+      }
+
+      // Draw User (South Korea) - Only if progress is near end
+      if (progress > 0.8) {
+        const userX = w * 0.82;
+        const userY = h * 0.38;
+
+        // Fade in user
+        const userOpacity = (progress - 0.8) * 5; // 0 to 1
+
+        // Glow
+        const grad = clusterCtx.createRadialGradient(userX, userY, 2, userX, userY, 20);
+        grad.addColorStop(0, `rgba(67, 97, 238, ${userOpacity})`);
+        grad.addColorStop(0.5, `rgba(67, 97, 238, ${userOpacity * 0.5})`);
+        grad.addColorStop(1, "rgba(67, 97, 238, 0)");
+        clusterCtx.fillStyle = grad;
+        clusterCtx.beginPath();
+        clusterCtx.arc(userX, userY, 20, 0, Math.PI * 2);
+        clusterCtx.fill();
+
+        // Pulse Animation Ring
+        const time = Date.now() / 1000;
+        const radius = 10 + Math.sin(time * 3) * 5;
+        clusterCtx.beginPath();
+        clusterCtx.arc(userX, userY, radius, 0, Math.PI * 2);
+        clusterCtx.strokeStyle = `rgba(255, 255, 255, ${userOpacity * 0.8})`;
+        clusterCtx.lineWidth = 1;
+        clusterCtx.stroke();
+
+        // Dot
+        clusterCtx.beginPath();
+        clusterCtx.arc(userX, userY, 6, 0, Math.PI * 2);
+        clusterCtx.fillStyle = `rgba(255, 255, 255, ${userOpacity})`;
+        clusterCtx.fill();
+        clusterCtx.strokeStyle = `rgba(67, 97, 238, ${userOpacity})`; // var(--primary)
+        clusterCtx.lineWidth = 2;
+        clusterCtx.stroke();
+
+        // Label
+        clusterCtx.fillStyle = `rgba(255, 255, 255, ${userOpacity})`;
+        clusterCtx.font = "bold 12px Montserrat Alternates";
+        clusterCtx.textAlign = "center";
+        clusterCtx.fillText("You", userX, userY + 25);
+      }
     }
 
+    // Update generateFakePopulation to include x,y
+    function generateFakePopulation() {
+      populationData = [];
+      const count = 200;
+      const mean = 80;
+      const std = 15;
+      const w = clusterCanvas.width;
+      const h = clusterCanvas.height;
 
+      for (let i = 0; i < count; i++) {
+        const u = 1 - Math.random();
+        const v = Math.random();
+        const z = Math.sqrt(-2.0 * Math.log(u)) * Math.cos(2.0 * Math.PI * v);
+        const bpm = Math.round(z * std + mean);
+        const variability = Math.random() * 100;
+        // Pre-calculate positions
+        const x = Math.random() * w;
+        const y = Math.random() * h;
 
-    // 다시 시작
-    btnRestart.onclick = () => {
-      answers = { politics: null, gender: null, identity: null };
-      document.querySelectorAll('.opt').forEach(o => o.classList.remove('selected'));
+        populationData.push({ bpm, variability, id: i + 1, x, y });
+      }
+    }
 
-      if (scanAnimFrame) cancelAnimationFrame(scanAnimFrame);
-      scanPercentEl.textContent = "Requesting camera permission…";
-      camWrap.style.animationDuration = "1.1s";
-      stopPPG();
-      stopCamera();
-      stopECGAnimation(); // Stop ECG
-      signalStatusEl.textContent = "";
-      // 초기 화면 설정
-      show(intro);
-    };
     function animateValue(obj, start, end, duration) {
       let startTimestamp = null;
       const step = (timestamp) => {
