Use img tag for world map background in cluster map

--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -307,6 +307,7 @@
             <div class="distribution-card">
               <div class="distribution-title">You in the moving crowd</div>
               <div class="cluster-map-wrap">
+                <img src="world_map.jpg" class="map-bg" alt="World Map">
                 <canvas id="cluster-canvas" width="300" height="200"></canvas>
               </div>
               <div class="distribution-desc">
