--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -60,7 +60,8 @@
         </div>
       </div>
       <div class="step-label">Question 2 of 5</div>
-      <h2>Should a government be allowed to restrict civil liberties during a national emergency?</h2>
+      <h2>Should a government be allowed to <span class="orange_txt">restrict civil liberties</span> during a national
+        emergency?</h2>
       <img src="q2.jpg" alt="Question 2 Image" class="q-image">
       <p>Please answer honestly, just as you normally think.</p>
       <div class="options-block">
@@ -81,7 +82,8 @@
         </div>
       </div>
       <div class="step-label">Question 3 of 5</div>
-      <h2>Do you support European bans on full-face religious coverings (burqa/niqab) in public spaces?</h2>
+      <h2>Do you support European bans on <span class="orange_txt">full-face religious coverings (burqa/niqab)</span> in
+        public spaces?</h2>
       <img src="q3.jpg" alt="Question 3 Image" class="q-image">
       <p>Please answer honestly, just as you normally think.</p>
       <div class="options-block">
@@ -101,7 +103,7 @@
         </div>
       </div>
       <div class="step-label">Question 4 of 5</div>
-      <h2>How do you view Spain’s ‘Okupa’ movement ?</h2>
+      <h2>How do you view Spain’s <span class="orange_txt">‘Okupa’</span> movement ?</h2>
       <p>Okupa :People, illegally occupying empty homes.</p>
       <img src="q4_rr.png" alt="Question 4 Image" class="q-image">
       <p>Please answer honestly, just as you normally think.</p>
@@ -122,7 +124,8 @@
         </div>
       </div>
       <div class="step-label">Question 5 of 5</div>
-      <h2>How do you view the rising age-based hostility toward older adults in Korea’s pension debates?</h2>
+      <h2>How do you view the <span class="orange_txt">rising age-based hostility</span> toward older adults in Korea’s
+        pension debates?</h2>
       <img src="q5.jpg" alt="Question 5 Image" class="q-image">
       <p>There is no right or wrong answer.</p>
       <div class="options-block">
