Apply latest changes to index.html and style.css

--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -82,7 +82,8 @@
         </div>
       </div>
       <div class="step-label">Question 3 of 5</div>
-      <h2>Do you support European bans on <span class="orange_txt">full-face religious coverings (burqa/niqab)</span> in
+      <h2>Do you support European bans on <span class="orange_txt">full-face religious coverings</span> <span
+          class="small_txt">(burqa/niqab)</span> in
         public spaces?</h2>
       <img src="q3.jpg" alt="Question 3 Image" class="q-image">
       <p>Please answer honestly, just as you normally think.</p>
@@ -215,7 +216,8 @@
         <!-- PAGE 2: The World View (Formerly Slide 1) -->
         <div class="result-slide" id="slide-2">
           <div class="slide-content center-text">
-            <h2 class="fade-in-text">There are more than<br>8.2 billion people<br>living completely<br>different lives.
+            <h2 class="fade-in-text">There are more than<br><span class="bold"> billion people</span><br>living
+              completely different lives.
             </h2>
             <img src="world_map.jpg" class="fade-in-image delay-2" alt="World Map">
             <p class="fade-in-text delay-1">Some start before sunrise.<br>Some move slowly.<br>Some feel safe.<br>Some
